--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Children''s poetry'
 - !lcc 'PZ'
 - !lcsh 'Nursery rhymes'
+- GITenberg
 title: In My Nursery
 url: http://www.gutenberg.org/ebooks/39741
